# service_template

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  service.cpp
src/: CMakeLists.txt  app.cpp  app.h  config.cpp  config.h
unit_tests/: CMakeLists.txt  test_template.cpp
